# didactic-doodle

./: .gitignore  AGENTS.md  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.agent/: PLANS.md  platform-rendering-architecture-execplan.md
.github/: CODEOWNERS
.github/workflows/: build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-web.yml  build-windows.yml  copyright.yml  release.yml
android/: build.gradle  gradle.properties.example  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/amalgam/magicdoodleboard/demo/: MagicDoodleBoardActivity.java
artifacts/baseline/: files.txt  inventory.md  legacy-symbols.txt
artifacts/final/: backend-matrix.md  headless-image-hash.txt  standalone-install-summary.txt  web-skia-artifacts.txt
board/: CMakeLists.txt
board/backends/android/: board_android_backend.c
board/backends/android/java/org/magicdoodle/board/: BoardView.java
board/backends/headless/: board_headless_backend.c
board/backends/ios/: board_ios_backend.mm
board/backends/sdl3/: board_sdl3_backend.c
board/backends/web/: board_web_backend.c
board/cmake/: BoardConfig.cmake.in
board/include/board/: board_android.h  board_app.h  board_backend.h  board_event.h  board_host.h  board_ios.h  board_native_view.h  board_scheduler.h  board_surface.h  board_types.h  board_version.h
board/src/: board_core.c  board_host.c  board_internal.h
board/tests/: board_headless_test.c
docs/history/: spdx-copyright-rewrite-2026-07-14.md
doodle/: CMakeLists.txt
doodle/cmake/: DoodleConfig.cmake.in
doodle/include/doodle/: doodle_canvas.h  doodle_renderer.h  doodle_renderer_provider.h  doodle_types.h  doodle_version.h
doodle/renderers/blend2d/: doodle_blend2d_stub.c
doodle/renderers/nanovg/: doodle_nanovg_stub.c
doodle/renderers/skia/: doodle_skia_renderer.cpp
doodle/renderers/vello/: doodle_vello_stub.c
doodle/src/: doodle_renderer.c
doodle/tests/: doodle_provider_stubs_test.c  doodle_provider_test.c
examples/android/: magic_doodle_board_android_demo.c
examples/common/: magic_doodle_board_scene.c  magic_doodle_board_scene.h
examples/demo/: demo_main.c  demo_scene.c  demo_scene.h
examples/demo_android/: demo_android_main.c
examples/demo_ios/: demo_ios_main.mm
examples/demo_web/: index.html
examples/desktop/: magic_doodle_board_demo.cpp
examples/ios/: Info.plist  magic_doodle_board_ios_demo.mm
examples/web/: index.html  magic_doodle_board_web_demo.c
include/tc_runtime/: tc_app.h  tc_backend.h  tc_canvas.h  tc_event.h  tc_graphics.h  tc_renderer.h  tc_scheduler.h  tc_types.h
ios/: CMakeLists.txt
magic/: CMakeLists.txt
magic/backends/cpu/: magic_cpu_context.c
magic/backends/metal/: magic_metal_context.mm
magic/backends/opengl/: magic_opengl_context.c
magic/backends/vulkan/: magic_vulkan_context.cpp
magic/backends/web/: magic_web_context.c
magic/cmake/: MagicConfig.cmake.in
magic/include/magic/: magic_context.h  magic_frame.h  magic_interop.h  magic_types.h  magic_version.h
magic/src/: magic_context.c  magic_context_private.h
magic/tests/: magic_cpu_test.c
plans/: convert-to-magic-doodle-board.md  exec-plan-spdx-copyright.md
scripts/: check_copyright.py  fetch-totalcross-skia.sh  test-android-cpu-skia.sh  test-android-opengl-skia.sh  test-android-vulkan-skia.sh  test-backend-matrix.sh  test-desktop-cpu-skia.sh  test-desktop-metal-skia.sh  test-desktop-opengl-skia.sh  test-desktop-vulkan-skia.sh  test-headless-cpu-skia.sh  test-ios-cpu-skia.sh  test-ios-metal-skia.sh  test-ios-opengl-skia.sh  test-web-skia.sh  test_check_copyright.py
src/: tc_internal.h
src/backends/android/: tc_android_backend.c  tc_android_backend.h
src/backends/glfw/: tc_glfw_backend.c  tc_glfw_backend.h
src/backends/ios/: tc_ios_backend.c  tc_ios_backend.h
src/backends/sdl/: tc_sdl_backend.c  tc_sdl_backend.h
src/backends/web/: tc_web_backend.c
src/backends/winit/: README.md
src/graphics/: tc_android_cpu_context.c  tc_android_gl_context.c  tc_android_graphics.c  tc_android_vulkan_context.cpp  tc_cpu_context.c  tc_gl_context.c  tc_ios_cpu_context.mm  tc_ios_gl_context.mm  tc_ios_metal_context.mm  tc_metal_context.c  tc_metal_context.mm  tc_vulkan_context.c  tc_web_gl_context.c
src/renderers/blend2d/: tc_blend2d_renderer.cpp  tc_blend2d_renderer_c_api.h
src/renderers/nanovg/: tc_nanovg_renderer.c
src/renderers/skia/: tc_skia_renderer.cpp  tc_skia_renderer_c_api.h
src/renderers/vello/: README.md
src/runtime/: tc_app.c  tc_event_queue.c  tc_scheduler.c
tests/architecture/: check_boundaries.py
tests/configuration/: check_combinations.py
tests/integration/: headless_skia.cpp
tests/integration/consumer/: CMakeLists.txt  main.c
tests/public_headers/: new_headers.c  new_headers.cpp
