# SPDX-FileCopyrightText: 2026 Amalgam Solucoes em TI Ltda.
# SPDX-License-Identifier: LGPL-2.1-only

cmake_minimum_required(VERSION 3.21)
project(tc_runtime VERSION 0.1.0 LANGUAGES C CXX)

set(TC_PLATFORM "DESKTOP" CACHE STRING "Target platform: DESKTOP, ANDROID, IOS, WEB")
set(TC_BACKEND "SDL" CACHE STRING "Platform backend: SDL, ANDROID_NATIVE, IOS_NATIVE, GLFW, WINIT")
set(TC_GRAPHICS "CPU" CACHE STRING "Graphics API: CPU, OPENGL, METAL, VULKAN")
set(TC_RENDERER "SKIA" CACHE STRING "2D renderer: SKIA, NANOVG, BLEND2D, VELLO")
set(TC_SKIA_TARGET "skia" CACHE STRING "CMake target exported by the Skia package")
set(TC_SKIA_ROOT "" CACHE PATH "Root of a TotalCross Skia release (headers/ and libskia-<platform>.a)")
set(TC_SKIA_LIBRARY "" CACHE FILEPATH "Optional explicit path to a Skia static library")
set_property(CACHE TC_PLATFORM PROPERTY STRINGS DESKTOP ANDROID IOS WEB)
set_property(CACHE TC_BACKEND PROPERTY STRINGS SDL ANDROID_NATIVE IOS_NATIVE GLFW WINIT)
set_property(CACHE TC_GRAPHICS PROPERTY STRINGS CPU OPENGL METAL VULKAN)
set_property(CACHE TC_RENDERER PROPERTY STRINGS SKIA NANOVG BLEND2D VELLO)

function(tc_require value description)
  list(FIND ARGN "${value}" index)
  if(index EQUAL -1)
    message(FATAL_ERROR "Unsupported ${description} '${value}'. Supported values: ${ARGN}")
  endif()
endfunction()

tc_require("${TC_PLATFORM}" "TC_PLATFORM" DESKTOP ANDROID IOS WEB)
tc_require("${TC_BACKEND}" "TC_BACKEND" SDL ANDROID_NATIVE IOS_NATIVE GLFW WINIT)
tc_require("${TC_GRAPHICS}" "TC_GRAPHICS" CPU OPENGL METAL VULKAN)
tc_require("${TC_RENDERER}" "TC_RENDERER" SKIA NANOVG BLEND2D VELLO)

if(NOT TC_BACKEND STREQUAL "SDL" AND NOT (TC_PLATFORM STREQUAL "ANDROID" AND TC_BACKEND STREQUAL "ANDROID_NATIVE"))
  message(FATAL_ERROR "TC_BACKEND=${TC_BACKEND} is a planned stub, not an implementation yet. Select -DTC_BACKEND=SDL.")
endif()
if(NOT TC_RENDERER STREQUAL "SKIA")
  message(FATAL_ERROR "TC_RENDERER=${TC_RENDERER} is a planned stub, not an implementation yet. Select -DTC_RENDERER=SKIA.")
endif()
if(TC_GRAPHICS STREQUAL "VULKAN")
  message(FATAL_ERROR "TC_GRAPHICS=VULKAN is a planned stub, not an implementation yet. Select CPU, OPENGL, or METAL.")
endif()
if(TC_GRAPHICS STREQUAL "METAL" AND NOT APPLE)
  message(FATAL_ERROR "TC_GRAPHICS=METAL requires a macOS host. Select CPU or OPENGL for this platform.")
endif()
if(TC_PLATFORM STREQUAL "ANDROID" OR TC_PLATFORM STREQUAL "IOS")
  if(TC_PLATFORM STREQUAL "ANDROID")
    if(DEFINED ANDROID_PLATFORM)
      string(REGEX MATCH "^android-([0-9]+)$" _android_platform_match "${ANDROID_PLATFORM}")
      if(NOT _android_platform_match OR CMAKE_MATCH_1 LESS 24)
        message(FATAL_ERROR "tc_runtime requires Android API level 24 or newer; configure the NDK with -DANDROID_PLATFORM=android-24 or higher.")
      endif()
    endif()
    message(FATAL_ERROR "TC_PLATFORM=ANDROID has a native lifecycle/input scheduler adapter, but no Android graphics context or GPU-enabled Skia archive is configured yet. Supply an Android NDK and Skia built with OpenGL ES or Vulkan before enabling this target.")
  endif()
  message(FATAL_ERROR "TC_PLATFORM=IOS requires its native backend, which is not implemented yet.")
endif()
if(TC_PLATFORM STREQUAL "WEB" AND NOT TC_GRAPHICS STREQUAL "OPENGL")
  message(FATAL_ERROR "TC_PLATFORM=WEB currently requires -DTC_GRAPHICS=OPENGL.")
endif()
if(TC_PLATFORM STREQUAL "WEB" AND NOT EMSCRIPTEN)
  message(FATAL_ERROR "TC_PLATFORM=WEB requires the Emscripten toolchain. Configure with emcmake cmake.")
endif()
if(NOT TC_PLATFORM STREQUAL "WEB")
  find_package(SDL3 CONFIG QUIET)
  if(NOT TARGET SDL3::SDL3)
    message(FATAL_ERROR "SDL3 is required by TC_BACKEND=SDL. Install SDL3 or set CMAKE_PREFIX_PATH to its CMake package.")
  endif()
endif()
if(TC_SKIA_ROOT)
  if(NOT TC_SKIA_LIBRARY)
    if(TC_PLATFORM STREQUAL "WEB")
      set(TC_SKIA_LIBRARY "${TC_SKIA_ROOT}/libskia-wasm32.a")
    elseif(APPLE)
      set(TC_SKIA_LIBRARY "${TC_SKIA_ROOT}/libskia-macos-arm64.a")
    elseif(WIN32)
      set(TC_SKIA_LIBRARY "${TC_SKIA_ROOT}/libskia-windows-x64.lib")
    elseif(UNIX)
      set(TC_SKIA_LIBRARY "${TC_SKIA_ROOT}/libskia-linux-x86_64.a")
    endif()
  endif()
  if(NOT EXISTS "${TC_SKIA_ROOT}/headers/modules/skia/include/core/SkCanvas.h" OR NOT EXISTS "${TC_SKIA_LIBRARY}")
    message(FATAL_ERROR "TC_SKIA_ROOT must contain headers/modules/skia/include/core/SkCanvas.h and a matching libskia archive. See README.md for the supported TotalCross release layout.")
  endif()
  add_library(tc_skia STATIC IMPORTED GLOBAL)
  set_target_properties(tc_skia PROPERTIES IMPORTED_LOCATION "${TC_SKIA_LIBRARY}" INTERFACE_INCLUDE_DIRECTORIES "${TC_SKIA_ROOT}/headers/modules/skia")
  if(NOT TC_PLATFORM STREQUAL "WEB")
    find_package(PNG REQUIRED)
    find_package(ZLIB REQUIRED)
    target_link_libraries(tc_skia INTERFACE PNG::PNG ZLIB::ZLIB)
  endif()
  if(APPLE AND NOT TC_PLATFORM STREQUAL "WEB")
    find_library(COCOA_FRAMEWORK Cocoa REQUIRED)
    find_library(COREFOUNDATION_FRAMEWORK CoreFoundation REQUIRED)
    find_library(COREGRAPHICS_FRAMEWORK CoreGraphics REQUIRED)
    find_library(CORETEXT_FRAMEWORK CoreText REQUIRED)
    find_library(IMAGEIO_FRAMEWORK ImageIO REQUIRED)
    find_library(METAL_FRAMEWORK Metal REQUIRED)
    find_library(QUARTZCORE_FRAMEWORK QuartzCore REQUIRED)
    target_link_libraries(tc_skia INTERFACE ${COCOA_FRAMEWORK} ${COREFOUNDATION_FRAMEWORK} ${COREGRAPHICS_FRAMEWORK} ${CORETEXT_FRAMEWORK} ${IMAGEIO_FRAMEWORK} ${METAL_FRAMEWORK} ${QUARTZCORE_FRAMEWORK})
  elseif(WIN32 AND NOT TC_PLATFORM STREQUAL "WEB")
    target_link_libraries(tc_skia INTERFACE dwrite d3d11 dxgi windowscodecs user32 gdi32 ole32)
  elseif(NOT TC_PLATFORM STREQUAL "WEB")
    find_package(Threads REQUIRED)
    target_link_libraries(tc_skia INTERFACE Threads::Threads dl)
  endif()
  set(TC_SKIA_LINK_TARGET tc_skia)
else()
  find_package(skia CONFIG QUIET)
  if(NOT TARGET ${TC_SKIA_TARGET})
    message(FATAL_ERROR "Skia is required by TC_RENDERER=SKIA. Supply -DTC_SKIA_ROOT=<TotalCross release directory>, or provide a Skia CMake package exporting target '${TC_SKIA_TARGET}'.")
  endif()
  set(TC_SKIA_LINK_TARGET ${TC_SKIA_TARGET})
endif()

set(TC_RUNTIME_SOURCES
  src/runtime/tc_app.c
  src/runtime/tc_scheduler.c
  src/runtime/tc_event_queue.c
  src/renderers/skia/tc_skia_renderer.cpp)
if(TC_PLATFORM STREQUAL "WEB")
  list(APPEND TC_RUNTIME_SOURCES src/backends/web/tc_web_backend.c)
else()
  list(APPEND TC_RUNTIME_SOURCES src/backends/sdl/tc_sdl_backend.c)
endif()
if(TC_GRAPHICS STREQUAL "CPU")
  list(APPEND TC_RUNTIME_SOURCES src/graphics/tc_cpu_context.c)
elseif(TC_GRAPHICS STREQUAL "OPENGL")
  if(TC_PLATFORM STREQUAL "WEB")
    list(APPEND TC_RUNTIME_SOURCES src/graphics/tc_web_gl_context.c)
  else()
    list(APPEND TC_RUNTIME_SOURCES src/graphics/tc_gl_context.c)
  endif()
elseif(TC_GRAPHICS STREQUAL "METAL")
  enable_language(OBJCXX)
  list(APPEND TC_RUNTIME_SOURCES src/graphics/tc_metal_context.mm)
endif()
add_library(tc_runtime ${TC_RUNTIME_SOURCES})
target_include_directories(tc_runtime PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(tc_runtime PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
target_compile_features(tc_runtime PUBLIC c_std_11)
target_compile_features(tc_runtime PRIVATE cxx_std_17)
target_link_libraries(tc_runtime PRIVATE ${TC_SKIA_LINK_TARGET})
if(NOT TC_PLATFORM STREQUAL "WEB")
  target_link_libraries(tc_runtime PRIVATE SDL3::SDL3)
endif()
target_compile_definitions(tc_runtime PRIVATE
  TC_BUILD_GRAPHICS_CPU=$<STREQUAL:${TC_GRAPHICS},CPU>
  TC_BUILD_GRAPHICS_OPENGL=$<STREQUAL:${TC_GRAPHICS},OPENGL>
  TC_BUILD_GRAPHICS_METAL=$<STREQUAL:${TC_GRAPHICS},METAL>)
if(TC_GRAPHICS STREQUAL "OPENGL")
  target_compile_definitions(tc_runtime PRIVATE SK_GL=1)
  if(TC_PLATFORM STREQUAL "WEB")
    target_link_options(tc_runtime INTERFACE "-sUSE_WEBGL2=1" "-sMIN_WEBGL_VERSION=2" "-sMAX_WEBGL_VERSION=2")
  elseif(APPLE)
    find_library(OPENGL_FRAMEWORK OpenGL REQUIRED)
    target_link_libraries(tc_runtime PRIVATE ${OPENGL_FRAMEWORK})
  else()
    find_package(OpenGL REQUIRED)
    target_link_libraries(tc_runtime PRIVATE OpenGL::GL)
  endif()
endif()
if(APPLE AND TC_SKIA_ROOT)
  # r4's macOS archive has both Ganesh GL and Metal enabled. These macros affect
  # public GPU value-type layouts and must match the linked archive, not selection.
  target_compile_definitions(tc_runtime PRIVATE SK_GL=1 SK_METAL=1)
elseif(TC_GRAPHICS STREQUAL "METAL")
  target_compile_definitions(tc_runtime PRIVATE SK_METAL=1)
endif()

add_executable(tc_demo examples/demo/demo_main.c examples/demo/demo_scene.c)
target_link_libraries(tc_demo PRIVATE tc_runtime)
target_compile_definitions(tc_demo PRIVATE TC_DEMO_GRAPHICS_OPENGL=$<STREQUAL:${TC_GRAPHICS},OPENGL> TC_DEMO_GRAPHICS_METAL=$<STREQUAL:${TC_GRAPHICS},METAL>)
if(UNIX AND NOT APPLE)
  target_link_libraries(tc_demo PRIVATE m)
endif()
set_target_properties(tc_demo PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/examples/demo")
if(TC_PLATFORM STREQUAL "WEB")
  set_target_properties(tc_demo PROPERTIES SUFFIX ".html")
  target_link_options(tc_demo PRIVATE
    "--shell-file"
    "${CMAKE_CURRENT_SOURCE_DIR}/examples/demo_web/index.html"
    "-sALLOW_MEMORY_GROWTH=1"
    "-sEXIT_RUNTIME=0")
endif()

message(STATUS "tc_runtime: platform=${TC_PLATFORM}; backend=${TC_BACKEND}; graphics=${TC_GRAPHICS}; renderer=${TC_RENDERER}")
