# SPDX-FileCopyrightText: 2026 Amalgam Solucoes em TI Ltda.
# SPDX-License-Identifier: LGPL-2.1-only
cmake_minimum_required(VERSION 3.21)
project(MagicDoodleBoard VERSION 0.1.0 LANGUAGES C CXX)

set(BOARD_BACKEND "HEADLESS" CACHE STRING "Board backend: HEADLESS, SDL3, GLFW, WEB, WINIT, ANDROID_NATIVE, IOS_NATIVE")
set(MAGIC_BACKEND "CPU" CACHE STRING "Magic backend: CPU, OPENGL, METAL, VULKAN, WEB")
set(DOODLE_RENDERER "NONE" CACHE STRING "Doodle renderer: NONE, SKIA, BLEND2D, NANOVG, VELLO")
option(MDB_BUILD_TESTS "Build Magic Doodle Board tests" ON)
option(MDB_BUILD_EXAMPLES "Build Magic Doodle Board examples" OFF)

if(NOT BOARD_BACKEND STREQUAL "HEADLESS" AND NOT BOARD_BACKEND STREQUAL "SDL3" AND NOT BOARD_BACKEND STREQUAL "GLFW" AND NOT BOARD_BACKEND STREQUAL "WEB" AND NOT BOARD_BACKEND STREQUAL "WINIT" AND NOT BOARD_BACKEND STREQUAL "ANDROID_NATIVE" AND NOT BOARD_BACKEND STREQUAL "IOS_NATIVE")
  message(FATAL_ERROR "Unsupported BOARD_BACKEND=${BOARD_BACKEND}")
endif()
if(NOT MAGIC_BACKEND STREQUAL "CPU" AND NOT MAGIC_BACKEND STREQUAL "OPENGL" AND NOT MAGIC_BACKEND STREQUAL "METAL" AND NOT MAGIC_BACKEND STREQUAL "VULKAN" AND NOT MAGIC_BACKEND STREQUAL "WEB")
  message(FATAL_ERROR "Unsupported MAGIC_BACKEND=${MAGIC_BACKEND}")
endif()
if(NOT DOODLE_RENDERER STREQUAL "NONE" AND NOT DOODLE_RENDERER STREQUAL "SKIA" AND NOT DOODLE_RENDERER STREQUAL "BLEND2D" AND NOT DOODLE_RENDERER STREQUAL "NANOVG" AND NOT DOODLE_RENDERER STREQUAL "VELLO")
  message(FATAL_ERROR "Unsupported DOODLE_RENDERER=${DOODLE_RENDERER}")
endif()
if(BOARD_BACKEND STREQUAL "HEADLESS" AND NOT MAGIC_BACKEND STREQUAL "CPU")
  message(FATAL_ERROR "BOARD_BACKEND=HEADLESS supports only MAGIC_BACKEND=CPU for this repository revision.")
endif()
if(NOT BOARD_BACKEND STREQUAL "HEADLESS" AND NOT BOARD_BACKEND STREQUAL "SDL3")
  message(FATAL_ERROR "BOARD_BACKEND=${BOARD_BACKEND} is declared but not implemented for this repository revision; select HEADLESS or SDL3.")
endif()
if(NOT MAGIC_BACKEND STREQUAL "CPU" AND NOT MAGIC_BACKEND STREQUAL "OPENGL")
  message(FATAL_ERROR "MAGIC_BACKEND=${MAGIC_BACKEND} is declared but not implemented for this repository revision; select CPU or OPENGL.")
endif()

if(MAGIC_BACKEND STREQUAL "OPENGL")
  set(BOARD_SDL3_ENABLE_OPENGL ON)
else()
  set(BOARD_SDL3_ENABLE_OPENGL OFF)
endif()

set(BOARD_BUILD_TESTS ${MDB_BUILD_TESTS})
set(MAGIC_BUILD_TESTS ${MDB_BUILD_TESTS})
set(DOODLE_BUILD_TESTS ${MDB_BUILD_TESTS})
add_subdirectory(board)
add_subdirectory(magic)
add_subdirectory(doodle)

if(MDB_BUILD_TESTS)
  enable_testing()
  find_package(Python3 COMPONENTS Interpreter REQUIRED)
  add_executable(mdb_public_headers_c tests/public_headers/new_headers.c)
  target_link_libraries(mdb_public_headers_c PRIVATE Board::Board Magic::Magic Doodle::Doodle)
  add_executable(mdb_public_headers_cpp tests/public_headers/new_headers.cpp)
  target_link_libraries(mdb_public_headers_cpp PRIVATE Board::Board Magic::Magic Doodle::Doodle)
  add_test(NAME mdb_public_headers_c COMMAND mdb_public_headers_c)
  add_test(NAME mdb_public_headers_cpp COMMAND mdb_public_headers_cpp)
  add_test(NAME mdb_boundaries COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/tests/architecture/check_boundaries.py ${CMAKE_CURRENT_SOURCE_DIR})
  if(DOODLE_RENDERER STREQUAL "SKIA")
    add_executable(mdb_headless_skia tests/integration/headless_skia.cpp)
    target_link_libraries(mdb_headless_skia PRIVATE Board::Board Magic::Magic Doodle::Skia)
    add_test(NAME mdb_headless_skia COMMAND mdb_headless_skia)
  endif()
endif()

if(MDB_BUILD_EXAMPLES)
  if(NOT BOARD_BACKEND STREQUAL "SDL3" OR NOT DOODLE_RENDERER STREQUAL "SKIA")
    message(FATAL_ERROR "MDB_BUILD_EXAMPLES currently requires BOARD_BACKEND=SDL3 and DOODLE_RENDERER=SKIA.")
  endif()
  add_executable(magic_doodle_board_demo examples/desktop/magic_doodle_board_demo.cpp)
  target_link_libraries(magic_doodle_board_demo PRIVATE Board::Sdl3 Magic::Magic Doodle::Skia)
  target_compile_definitions(magic_doodle_board_demo PRIVATE MDB_DEMO_OPENGL=$<STREQUAL:${MAGIC_BACKEND},OPENGL>)
  set_target_properties(magic_doodle_board_demo PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/examples/desktop")
  if(MDB_BUILD_TESTS AND MAGIC_BACKEND STREQUAL "OPENGL")
    add_test(NAME mdb_desktop_opengl COMMAND magic_doodle_board_demo --frames 3)
  endif()
endif()

message(STATUS "Magic Doodle Board: board=${BOARD_BACKEND}; magic=${MAGIC_BACKEND}; doodle=${DOODLE_RENDERER}")
