cmake_minimum_required(VERSION 3.21)
project(Board VERSION 0.1.0 LANGUAGES C)
include(GNUInstallDirs)
include(CMakePackageConfigHelpers)
set(BOARD_BACKEND "HEADLESS" CACHE STRING "Board backend: HEADLESS, SDL3, GLFW, WEB, WINIT, ANDROID_NATIVE, IOS_NATIVE")
set_property(CACHE BOARD_BACKEND PROPERTY STRINGS HEADLESS SDL3 GLFW WEB WINIT ANDROID_NATIVE IOS_NATIVE)
option(BOARD_BUILD_TESTS "Build Board tests" ON)
option(BOARD_SDL3_ENABLE_OPENGL "Create SDL3 windows with OpenGL support" OFF)
option(BOARD_SDL3_ENABLE_METAL "Create SDL3 windows with Metal support" OFF)
option(BOARD_IOS_ENABLE_OPENGL "Create iOS Board views with OpenGL ES support" OFF)
if(NOT BOARD_BACKEND STREQUAL "HEADLESS" AND NOT BOARD_BACKEND STREQUAL "SDL3" AND NOT BOARD_BACKEND STREQUAL "IOS_NATIVE")
  message(FATAL_ERROR "BOARD_BACKEND=${BOARD_BACKEND} is declared but not implemented for this repository revision; select HEADLESS, SDL3, or IOS_NATIVE.")
endif()
set(BOARD_SOURCES src/board_core.c backends/headless/board_headless_backend.c)
if(BOARD_BACKEND STREQUAL "SDL3")
  find_package(SDL3 CONFIG REQUIRED)
  list(APPEND BOARD_SOURCES backends/sdl3/board_sdl3_backend.c)
endif()
if(BOARD_BACKEND STREQUAL "IOS_NATIVE")
  if(NOT CMAKE_SYSTEM_NAME STREQUAL "iOS")
    message(FATAL_ERROR "BOARD_BACKEND=IOS_NATIVE requires an iOS CMake toolchain (CMAKE_SYSTEM_NAME=iOS).")
  endif()
  enable_language(OBJCXX)
  list(APPEND BOARD_SOURCES backends/ios/board_ios_backend.mm)
endif()
add_library(board_core ${BOARD_SOURCES})
set_target_properties(board_core PROPERTIES EXPORT_NAME Board)
add_library(Board::Board ALIAS board_core)
target_include_directories(board_core PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
target_compile_features(board_core PUBLIC c_std_11)
target_compile_definitions(board_core PRIVATE BOARD_BUILD_SDL3=$<STREQUAL:${BOARD_BACKEND},SDL3> BOARD_BUILD_IOS=$<STREQUAL:${BOARD_BACKEND},IOS_NATIVE> BOARD_BUILD_IOS_OPENGL=$<BOOL:${BOARD_IOS_ENABLE_OPENGL}> BOARD_BUILD_SDL3_OPENGL=$<BOOL:${BOARD_SDL3_ENABLE_OPENGL}> BOARD_BUILD_SDL3_METAL=$<BOOL:${BOARD_SDL3_ENABLE_METAL}>)
if(BOARD_BACKEND STREQUAL "SDL3")
  target_link_libraries(board_core PRIVATE SDL3::SDL3)
endif()
if(BOARD_BACKEND STREQUAL "IOS_NATIVE")
  find_library(BOARD_UIKIT_FRAMEWORK UIKit REQUIRED)
  find_library(BOARD_QUARTZCORE_FRAMEWORK QuartzCore REQUIRED)
  find_library(BOARD_COREGRAPHICS_FRAMEWORK CoreGraphics REQUIRED)
  target_link_libraries(board_core PRIVATE ${BOARD_UIKIT_FRAMEWORK} ${BOARD_QUARTZCORE_FRAMEWORK} ${BOARD_COREGRAPHICS_FRAMEWORK})
  if(BOARD_IOS_ENABLE_OPENGL)
    find_library(BOARD_OPENGLES_FRAMEWORK OpenGLES REQUIRED)
    target_link_libraries(board_core PRIVATE ${BOARD_OPENGLES_FRAMEWORK})
    target_compile_definitions(board_core PRIVATE GLES_SILENCE_DEPRECATION=1)
  endif()
  target_compile_options(board_core PRIVATE $<$<COMPILE_LANGUAGE:OBJCXX>:-fobjc-arc>)
endif()
add_library(board_backend_headless INTERFACE)
set_target_properties(board_backend_headless PROPERTIES EXPORT_NAME Headless)
add_library(Board::Headless ALIAS board_backend_headless)
target_link_libraries(board_backend_headless INTERFACE board_core)
if(BOARD_BACKEND STREQUAL "SDL3")
  add_library(board_backend_sdl3 INTERFACE)
  set_target_properties(board_backend_sdl3 PROPERTIES EXPORT_NAME Sdl3)
  add_library(Board::Sdl3 ALIAS board_backend_sdl3)
  target_link_libraries(board_backend_sdl3 INTERFACE board_core)
endif()
if(BOARD_BACKEND STREQUAL "IOS_NATIVE")
  add_library(board_backend_ios INTERFACE)
  set_target_properties(board_backend_ios PROPERTIES EXPORT_NAME Ios)
  add_library(Board::Ios ALIAS board_backend_ios)
  target_link_libraries(board_backend_ios INTERFACE board_core)
endif()
if(BOARD_BUILD_TESTS)
  enable_testing()
  add_executable(board_headless_test tests/board_headless_test.c)
  target_link_libraries(board_headless_test PRIVATE board_core)
  add_test(NAME board_headless COMMAND board_headless_test)
endif()
install(TARGETS board_core board_backend_headless EXPORT BoardTargets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
if(TARGET board_backend_sdl3)
  install(TARGETS board_backend_sdl3 EXPORT BoardTargets)
endif()
if(TARGET board_backend_ios)
  install(TARGETS board_backend_ios EXPORT BoardTargets)
endif()
install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(EXPORT BoardTargets NAMESPACE Board:: DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Board)
configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake/BoardConfig.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/BoardConfig.cmake INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Board)
write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/BoardConfigVersion.cmake VERSION ${PROJECT_VERSION} COMPATIBILITY SameMajorVersion)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/BoardConfig.cmake ${CMAKE_CURRENT_BINARY_DIR}/BoardConfigVersion.cmake DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Board)
