cmake_minimum_required(VERSION 3.21)
project(Doodle VERSION 0.1.0 LANGUAGES C)
include(GNUInstallDirs)
include(CMakePackageConfigHelpers)
set(DOODLE_RENDERER "NONE" CACHE STRING "Doodle renderer: NONE, SKIA, BLEND2D, NANOVG, VELLO")
set_property(CACHE DOODLE_RENDERER PROPERTY STRINGS NONE SKIA BLEND2D NANOVG VELLO)
option(DOODLE_BUILD_TESTS "Build Doodle tests" ON)
if(NOT DOODLE_RENDERER STREQUAL "NONE")
  message(FATAL_ERROR "DOODLE_RENDERER=${DOODLE_RENDERER} is declared but not implemented for this repository revision; select NONE for core and provider-contract tests.")
endif()
if(NOT TARGET Magic::Magic)
  find_package(Magic CONFIG REQUIRED)
endif()
add_library(doodle_core src/doodle_renderer.c)
set_target_properties(doodle_core PROPERTIES EXPORT_NAME Doodle)
add_library(Doodle::Doodle ALIAS doodle_core)
target_link_libraries(doodle_core PUBLIC Magic::Magic)
target_include_directories(doodle_core PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
target_compile_features(doodle_core PUBLIC c_std_11)
if(DOODLE_BUILD_TESTS)
 enable_testing()
 add_executable(doodle_provider_test tests/doodle_provider_test.c)
 target_link_libraries(doodle_provider_test PRIVATE doodle_core)
 add_test(NAME doodle_provider COMMAND doodle_provider_test)
endif()
install(TARGETS doodle_core EXPORT DoodleTargets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(EXPORT DoodleTargets NAMESPACE Doodle:: DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Doodle)
configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake/DoodleConfig.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/DoodleConfig.cmake INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Doodle)
write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/DoodleConfigVersion.cmake VERSION ${PROJECT_VERSION} COMPATIBILITY SameMajorVersion)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/DoodleConfig.cmake ${CMAKE_CURRENT_BINARY_DIR}/DoodleConfigVersion.cmake DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Doodle)
