cmake_minimum_required(VERSION 3.21)
project(Doodle VERSION 0.1.0 LANGUAGES C)
include(GNUInstallDirs)
include(CMakePackageConfigHelpers)
set(DOODLE_RENDERER "NONE" CACHE STRING "Doodle renderer: NONE, SKIA, BLEND2D, NANOVG, VELLO")
set(DOODLE_SKIA_ROOT "" CACHE PATH "Root produced by scripts/fetch-totalcross-skia.sh")
set_property(CACHE DOODLE_RENDERER PROPERTY STRINGS NONE SKIA BLEND2D NANOVG VELLO)
option(DOODLE_BUILD_TESTS "Build Doodle tests" ON)
if(NOT DOODLE_RENDERER STREQUAL "NONE" AND NOT DOODLE_RENDERER STREQUAL "SKIA")
  message(FATAL_ERROR "DOODLE_RENDERER=${DOODLE_RENDERER} is declared but not implemented for this repository revision; select NONE or SKIA.")
endif()
if(NOT TARGET Magic::Magic)
  find_package(Magic CONFIG REQUIRED)
endif()
add_library(doodle_core src/doodle_renderer.c)
set_target_properties(doodle_core PROPERTIES EXPORT_NAME Doodle)
add_library(Doodle::Doodle ALIAS doodle_core)
target_link_libraries(doodle_core PUBLIC Magic::Magic)
target_include_directories(doodle_core PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
target_compile_features(doodle_core PUBLIC c_std_11)
if(DOODLE_RENDERER STREQUAL "SKIA")
  enable_language(CXX)
  if(NOT DOODLE_SKIA_ROOT)
    message(FATAL_ERROR "DOODLE_RENDERER=SKIA requires -DDOODLE_SKIA_ROOT=<directory created by scripts/fetch-totalcross-skia.sh>.")
  endif()
  if(APPLE)
    set(DOODLE_SKIA_LIBRARY "${DOODLE_SKIA_ROOT}/libskia-macos-arm64.a")
  elseif(UNIX)
    set(DOODLE_SKIA_LIBRARY "${DOODLE_SKIA_ROOT}/libskia-linux-x86_64.a")
  elseif(WIN32)
    set(DOODLE_SKIA_LIBRARY "${DOODLE_SKIA_ROOT}/libskia-windows-x64.lib")
  endif()
  if(NOT EXISTS "${DOODLE_SKIA_ROOT}/headers/modules/skia/include/core/SkCanvas.h" OR NOT EXISTS "${DOODLE_SKIA_LIBRARY}")
    message(FATAL_ERROR "DOODLE_SKIA_ROOT must contain headers/modules/skia/include/core/SkCanvas.h and the matching Skia archive.")
  endif()
  add_library(doodle_skia_external STATIC IMPORTED GLOBAL)
  set_target_properties(doodle_skia_external PROPERTIES IMPORTED_LOCATION "${DOODLE_SKIA_LIBRARY}" INTERFACE_INCLUDE_DIRECTORIES "${DOODLE_SKIA_ROOT}/headers/modules/skia")
  find_package(PNG REQUIRED)
  find_package(ZLIB REQUIRED)
  target_link_libraries(doodle_skia_external INTERFACE PNG::PNG ZLIB::ZLIB)
  if(APPLE)
    find_library(COCOA_FRAMEWORK Cocoa REQUIRED)
    find_library(COREFOUNDATION_FRAMEWORK CoreFoundation REQUIRED)
    find_library(COREGRAPHICS_FRAMEWORK CoreGraphics REQUIRED)
    find_library(CORETEXT_FRAMEWORK CoreText REQUIRED)
    find_library(IMAGEIO_FRAMEWORK ImageIO REQUIRED)
    find_library(METAL_FRAMEWORK Metal REQUIRED)
    find_library(QUARTZCORE_FRAMEWORK QuartzCore REQUIRED)
    target_link_libraries(doodle_skia_external INTERFACE ${COCOA_FRAMEWORK} ${COREFOUNDATION_FRAMEWORK} ${COREGRAPHICS_FRAMEWORK} ${CORETEXT_FRAMEWORK} ${IMAGEIO_FRAMEWORK} ${METAL_FRAMEWORK} ${QUARTZCORE_FRAMEWORK})
  endif()
  add_library(doodle_renderer_skia renderers/skia/doodle_skia_renderer.cpp)
  set_target_properties(doodle_renderer_skia PROPERTIES EXPORT_NAME Skia)
  add_library(Doodle::Skia ALIAS doodle_renderer_skia)
  target_link_libraries(doodle_renderer_skia PUBLIC doodle_core doodle_skia_external)
  target_compile_features(doodle_renderer_skia PRIVATE cxx_std_17)
endif()
if(DOODLE_BUILD_TESTS)
 enable_testing()
 add_executable(doodle_provider_test tests/doodle_provider_test.c)
 target_link_libraries(doodle_provider_test PRIVATE doodle_core)
 add_test(NAME doodle_provider COMMAND doodle_provider_test)
endif()
install(TARGETS doodle_core EXPORT DoodleTargets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
if(TARGET doodle_renderer_skia)
  install(TARGETS doodle_renderer_skia EXPORT DoodleTargets ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
endif()
install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(EXPORT DoodleTargets NAMESPACE Doodle:: DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Doodle)
configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake/DoodleConfig.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/DoodleConfig.cmake INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Doodle)
write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/DoodleConfigVersion.cmake VERSION ${PROJECT_VERSION} COMPATIBILITY SameMajorVersion)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/DoodleConfig.cmake ${CMAKE_CURRENT_BINARY_DIR}/DoodleConfigVersion.cmake DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Doodle)
